# eag_v1_s3

./: .gitignore  INSTALLATION_GUIDE.md  README.md  Session3.ipynb  content.js  manifest.json  popup.html  popup.js  pyproject.toml  styles.css
icons/: ICON_INSTRUCTIONS.md
notes/: S3-Assignment.ipynb  S3-ClassRoom Notes.ipynb
src/eag_session3/: __init__.py  main.py
